--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
 
   <!-- Custom styles for this template-->
   <!-- Bootstrap core CSS-->
-    <link src="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link src="assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
 
     <!-- Custom fonts for this template-->
     <link href="assets/vendor/fontawesome-free/css/all.min.css" type="text/css" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link src="styles.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <app-root></app-root>
