homepage and logo

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="icon" type="image/x-icon" href="assets/img/onlylogo.PNG" />
+
   <!-- Custom styles for this template-->
   <!-- Bootstrap core CSS-->
     <link src="assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -17,9 +19,14 @@
     <!-- Custom styles for this template-->
     <link href="styles.css" rel="stylesheet" type="text/css">
 
+    <link href="assets/vendor/aos.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
   <app-root></app-root>
+
+   <!--Homepage-->
+   <script src="assets/vendor/aos.js" type="text/javascript"></script>
 
   <!-- Bootstrap core JavaScript-->
   <script src="assets/vendor/jquery/jquery.min.js" type="text/javascript"></script>
